[init] microservice user-contact and edit microservice auth
