# docs/swagger.json
@@ -656,7 +656,12 @@
                 }
             },
             "patch": {
-                "description": "Частичное обновление информации пользователя. Можно обновить только нужные поля.",
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Обновляет имя, username или bio текущего пользователя",
                 "consumes": [
                     "application/json"
                 ],
@@ -666,7 +671,7 @@
                 "tags": [
                     "user"
                 ],
-                "summary": "Обновить информацию пользователя",
+                "summary": "Обновить информацию о пользователе",
                 "parameters": [
                     {
                         "type": "string",
@@ -677,7 +682,7 @@
                     },
                     {
                         "description": "Данные для обновления",
-                        "name": "request",
+                        "name": "user",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -687,28 +692,16 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Информация пользователя обновилось"
+                        "description": "Информация успешно обновлена"
                     },
                     "400": {
-                        "description": "Bad Request",
+                        "description": "Неверный формат запроса",
                         "schema": {
                             "$ref": "#/definitions/dto.ErrorDTO"
                         }
                     },
                     "401": {
-                        "description": "Unauthorized",
-                        "schema": {
-                            "$ref": "#/definitions/dto.ErrorDTO"
-                        }
-                    },
-                    "403": {
-                        "description": "Forbidden",
-                        "schema": {
-                            "$ref": "#/definitions/dto.ErrorDTO"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
+                        "description": "Неавторизованный доступ",
                         "schema": {
                             "$ref": "#/definitions/dto.ErrorDTO"
                         }
@@ -808,7 +801,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "user"
+                    "auth"
                 ],
                 "summary": "удалить сессию пользователя",
                 "parameters": [
@@ -863,7 +856,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "user"
+                    "auth"
                 ],
                 "summary": "Получить список сессий пользователя",
                 "responses": {
@@ -904,7 +897,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "user"
+                    "auth"
                 ],
                 "summary": "удалить сессии пользователя, кроме текущей",
                 "parameters": [
@@ -942,7 +935,7 @@
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "Позволяет текущему авторизованному пользователю загрузить или обновить свой аватар",
+                "description": "Загружает новый аватар для текущего пользователя",
                 "consumes": [
                     "multipart/form-data"
                 ],
@@ -980,19 +973,13 @@
                         }
                     },
                     "400": {
-                        "description": "Ошибка загрузки файла",
+                        "description": "Неверный формат запроса",
                         "schema": {
                             "$ref": "#/definitions/dto.ErrorDTO"
                         }
                     },
                     "401": {
                         "description": "Неавторизованный доступ",
-                        "schema": {
-                            "$ref": "#/definitions/dto.ErrorDTO"
-                        }
-                    },
-                    "500": {
-                        "description": "Внутренняя ошибка сервера",
                         "schema": {
                             "$ref": "#/definitions/dto.ErrorDTO"
                         }
@@ -1027,7 +1014,7 @@
                         "required": true
                     },
                     {
-                        "description": "Запрос с номером телефона",
+                        "description": "Номер телефона",
                         "name": "request",
                         "in": "body",
                         "required": true,
@@ -1044,19 +1031,19 @@
                         }
                     },
                     "400": {
-                        "description": "Неверный формат номера телефона",
+                        "description": "Неверный формат запроса",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ErrorDTO"
+                        }
+                    },
+                    "401": {
+                        "description": "Неавторизованный доступ",
                         "schema": {
                             "$ref": "#/definitions/dto.ErrorDTO"
                         }
                     },
                     "404": {
                         "description": "Пользователь не найден",
-                        "schema": {
-                            "$ref": "#/definitions/dto.ErrorDTO"
-                        }
-                    },
-                    "500": {
-                        "description": "Внутренняя ошибка сервера",
                         "schema": {
                             "$ref": "#/definitions/dto.ErrorDTO"
                         }
@@ -1071,7 +1058,7 @@
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "Возвращает полные данные о пользователе по указанному имени пользователя",
+                "description": "Возвращает полные данные о пользователе по указанному username",
                 "consumes": [
                     "application/json"
                 ],
@@ -1081,7 +1068,7 @@
                 "tags": [
                     "user"
                 ],
-                "summary": "Получить информацию о пользователе по имени пользователя",
+                "summary": "Получить информацию о пользователе по username",
                 "parameters": [
                     {
                         "type": "string",
@@ -1091,7 +1078,7 @@
                         "required": true
                     },
                     {
-                        "description": "Запрос с именем пользователя",
+                        "description": "Username пользователя",
                         "name": "request",
                         "in": "body",
                         "required": true,
@@ -1108,19 +1095,19 @@
                         }
                     },
                     "400": {
-                        "description": "Неверный формат имени пользователя",
+                        "description": "Неверный формат запроса",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ErrorDTO"
+                        }
+                    },
+                    "401": {
+                        "description": "Неавторизованный доступ",
                         "schema": {
                             "$ref": "#/definitions/dto.ErrorDTO"
                         }
                     },
                     "404": {
                         "description": "Пользователь не найден",
-                        "schema": {
-                            "$ref": "#/definitions/dto.ErrorDTO"
-                        }
-                    },
-                    "500": {
-                        "description": "Внутренняя ошибка сервера",
                         "schema": {
                             "$ref": "#/definitions/dto.ErrorDTO"
                         }
